--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "@sveltejs/kit": "latest",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "form-data": "^4.0.4",
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
